# 4122-Final-Project

./: CMakeLists.txt  README.md  main.cpp
Animation/: ActionEnum.h  AnimatedSprite.cpp  AnimatedSprite.h  Animations.cpp  Animations.h  Coordinate.cpp  Coordinate.h  TestAnimation.cpp  TestAnimation.h
MainMenu/: CMakeLists.txt  Menu.cpp  Menu.h  main.cpp
Scenes/: Scene1.cpp  Scene1.h
